--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -6,13 +5,12 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+vercel.json
 node_modules
 dist
 dist-ssr
 *.local
-
-# Editor directories and files
+vite.config.js
 .vscode/*
 !.vscode/extensions.json
 .idea
